--- a/css/themes/style1/yellow-blue.css
+++ b/css/themes/style1/yellow-blue.css
@@ -8127,3 +8127,12 @@ ul.chats li.out .message {
   border-radius: 0px !important;
   border: 1px solid #e5e5e5;
 }
+.group-info h5{
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+.group-info p{
+  margin-bottom: 2px;
+  margin-top: 2px;
+  font-size: 10px;
+}
