--- a/css/themes/style1/yellow-blue.css
+++ b/css/themes/style1/yellow-blue.css
@@ -8136,3 +8136,77 @@ ul.chats li.out .message {
   margin-top: 2px;
   font-size: 10px;
 }
+
+footer {
+  /* just for demo */
+  background-color: #F8F8F8;
+  border-top: 1px solid #E7E7E7;
+  text-align:center;
+  padding:20px;
+  /* just for demo */
+
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 60px;
+  width: 100%;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.navbar-to-right{
+  float:right;
+
+}
+.btn-to-right{
+  float:right;
+}
